# palangrotte

./: Cargo.toml  GEMINI.md  README.md  folders.enc  folders.txt  index.php  palangrotte.toml
src/: canary.rs  encryption.rs  lib.rs  linux_notification.rs  logger.rs  main.rs  notify.rs  notify_access.rs  settings.rs
