[package]
name = "palangrotte"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
notify = "8.2.0"
filetime = "0.2"
ring = "0.17"
rand = "0.8"
pbkdf2 = "0.12"
rpassword = "7.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
system_shutdown = "4.0.1"
